# EagleGame

./: CMakeLists.txt
include/: Aircraft.hpp  Animation.hpp  Application.hpp  BloomEffect.hpp  Button.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Component.hpp  Container.hpp  DataTables.hpp  EmitterNode.hpp  Entity.hpp  Game.hpp  GameOverState.hpp  GameState.hpp  KeyToString.hpp  Label.hpp  LoadingState.hpp  MenuState.hpp  MusicPlayer.hpp  ParallelTask.hpp  Particle.hpp  ParticleNode.hpp  PauseState.hpp  Pickup.hpp  Player.hpp  PostEffect.hpp  Projectile.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SettingsState.hpp  SoundNode.hpp  SoundPlayer.hpp  SpriteNode.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  (+5 more)
src/: Aircraft.cpp  Animation.cpp  Application.cpp  BloomEffect.cpp  Button.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  DataTables.cpp  EmitterNode.cpp  Entity.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  KeyToString.cpp  Label.cpp  LoadingState.cpp  MenuState.cpp  MusicPlayer.cpp  ParallelTask.cpp  ParticleNode.cpp  PauseState.cpp  Pickup.cpp  Player.cpp  PostEffect.cpp  Projectile.cpp  SceneNode.cpp  SettingsState.cpp  SoundNode.cpp  SoundPlayer.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  TextNode.cpp  TitleState.cpp  Utility.cpp  World.cpp  main.cpp
